--- a/.config/i3/config
+++ b/.config/i3/config
@@ -284,7 +284,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10; workspace $ws10
 #: Layouts {{{
 
 # split layout
-bindsym $mod+b split h
+bindsym $mod+h split h
 bindsym $mod+v split v
 
 default_orientation horizontal
@@ -292,7 +292,7 @@ default_orientation horizontal
 # switch between layouts
 bindsym $mod+Shift+s layout stacking
 bindsym $mod+Shift+w layout tabbed
-bindsym $mod+Shift+t layout toggle split
+bindsym $mod+Shift+e layout toggle split
 
 # make the focused container fullscreen
 bindsym $mod+f fullscreen toggle
@@ -329,15 +329,15 @@ mode "resize" {
   # Pressing down will grow the window’s height.
   # Pressing left will shrink the window’s width.
   # Pressing right will grow the window’s width.
-  bindsym $up     resize shrink   height  5 px or 5 ppt
-  bindsym $down   resize grow     height  5 px or 5 ppt
   bindsym $left   resize shrink   width   5 px or 5 ppt
+  bindsym $down   resize grow     height  5 px or 5 ppt
+  bindsym $up     resize shrink   height  5 px or 5 ppt
   bindsym $right  resize grow     width   5 px or 5 ppt
 
   # same bindings, but for the arrow keys
-  bindsym Up      resize shrink   height  5 px or 5 ppt
-  bindsym Down    resize grow     height  5 px or 5 ppt
   bindsym Left    resize shrink   width   5 px or 5 ppt
+  bindsym Down    resize grow     height  5 px or 5 ppt
+  bindsym Up      resize shrink   height  5 px or 5 ppt
   bindsym Right   resize grow     width   5 px or 5 ppt
 
   # back to normal: Enter or Escape or $mod+r
