--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -458,28 +458,30 @@ wrapping-scroll = false
 format = <label-state> <label-mode>
 format-padding = 2
 
+label-state-padding = 2
+
 label-mode = %mode%
 label-mode-background = ${colors.primary}
 label-mode-foreground = ${colors.background}
-label-mode-padding = 2
+label-mode-padding = ${self.label-state-padding}
 
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
 label-focused-foreground = ${colors.foreground}
-label-focused-padding = 2
+label-focused-padding = ${self.label-state-padding}
 label-focused-underline= ${colors.primary}
 
 label-unfocused = %index%
-label-unfocused-padding = 2
+label-unfocused-padding = ${self.label-state-padding}
 
 label-visible = %index%
 label-visible-background = ${self.label-focused-background}
-label-visible-padding = ${self.label-focused-padding}
+label-visible-padding = ${self.label-state-padding}
 label-visible-underline = ${self.label-focused-underline}
 
 label-urgent = %index%
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = ${self.label-state-padding}
 
 ; Separator in between workspaces
 ; label-separator = |
