--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -132,7 +132,42 @@ font:
 draw_bold_text_with_bright_colors: true
 
 schemes:
-  panda_syntax: &srcery
+  horizon: &horizon
+    primary:
+      background: "#16161c"
+      foreground: "#fdf0ed"
+
+    cursor:
+      text: CellBackground
+      cursor: CellForeground
+
+    selection:
+      text: CellBackground
+      background: CellForeground
+
+    # Normal colors
+    normal:
+      black:    "#1c1e26"
+      red:      "#ff2b6c"
+      green:    "#29d398"
+      yellow:   "#fab795"
+      blue:     "#26bbd9"
+      magenta:  "#ee64ae"
+      cyan:     "#59e3e3"
+      white:    "#fdf0ed"
+
+    # Bright colors
+    bright:
+      black:    "#232530"
+      red:      "#ec6a88"
+      green:    "#3fdaa4"
+      yellow:   "#fbc3a7"
+      blue:     "#3fc6de"
+      magenta:  "#f075b7"
+      cyan:     "#6be6e6"
+      white:    "#fadad1"
+
+  srcery: &srcery
     primary:
       background: "#1c1b19"
       foreground: "#d0bfa1"
@@ -239,7 +274,7 @@ schemes:
       cyan:     "#8ec07c"
       white:    "#ebdbb2"
 
-colors: *srcery
+colors: *horizon
 
 # Bell
 #
