--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -132,6 +132,45 @@ font:
 draw_bold_text_with_bright_colors: true
 
 schemes:
+  tokyonight: &tokyonight
+    primary:
+      background: "0x1a1b26"
+      foreground: "0xc0caf5"
+
+    cursor:
+      text: CellBackground
+      cursor: CellForeground
+
+    selection:
+      text: CellBackground
+      background: CellForeground
+
+    # Normal colors
+    normal:
+      black:    "0x15161E"
+      red:      "0xf7768e"
+      green:    "0x9ece6a"
+      yellow:   "0xe0af68"
+      blue:     "0x7aa2f7"
+      magenta:  "0xbb9af7"
+      cyan:     "0x7dcfff"
+      white:    "0xa9b1d6"
+
+    # Bright colors
+    bright:
+      black:    "0x414868"
+      red:      "0xf7768e"
+      green:    "0x9ece6a"
+      yellow:   "0xe0af68"
+      blue:     "0x7aa2f7"
+      magenta:  "0xbb9af7"
+      cyan:     "0x7dcfff"
+      white:    "0xc0caf5"
+
+    indexed_colors:
+      - { index: 16, color: '0xff9e64' }
+      - { index: 17, color: '0xdb4b4b' }
+
   horizon: &horizon
     primary:
       background: "#16161c"
@@ -274,7 +313,7 @@ schemes:
       cyan:     "#8ec07c"
       white:    "#ebdbb2"
 
-colors: *horizon
+colors: *tokyonight
 
 # Bell
 #
