--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 # ┳┏ o┏┓┓┏┓┓┓ ┳
 # ┣┻┓┃ ┃  ┃ ┗┏┛
-# ┛ ┛┛ ┛  ┛  ┛ 
+# ┛ ┛┛ ┛  ┛  ┛
 #
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
@@ -11,7 +11,7 @@
 
 #: To get a full list of supported fonts use `kitty list-fonts`
 
-font_family         JetBrainsMono Nerd Font
+font_family         Iosevka Nerd Font
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
