--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -20,7 +20,7 @@ shadow = true;
 shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, default 0.75)
-shadow-opacity = 0.75;
+shadow-opacity = 0.6;
 
 # The left offset for shadows, in pixels. (default -15)
 shadow-offset-x = -12;
@@ -111,7 +111,7 @@ fade-delta = 5;
 # Transparency / Opacity {{{
 
 # Opacity of inactive windows. (0.1 - 1.0, default 1.0)
-inactive-opacity = 0.8;
+inactive-opacity = 0.7;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 0.7;
@@ -384,7 +384,8 @@ wintypes:
   }
   dropdown_menu:
   {
-    opacity = 0.9;
+    opacity = 0.95;
+    full-shadow = false;
   }
   fullscreen:
   {
@@ -395,13 +396,14 @@ wintypes:
   }
   popup_menu:
   {
-    opacity = 0.9;
+    opacity = 0.95;
+    full-shadow = false;
   }
   tooltip:
   {
     fade = true;
     shadow = true;
-    opacity = 0.75;
+    opacity = 0.8;
     focus = true;
     full-shadow = false;
   };
