--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,10 +1,9 @@
 # $HOME/.config/i3/config
-#  _ _____
-# (_)___ /_      ___ __ ___
-# | | |_ \ \ /\ / / '_ ` _ \
-# | |___) \ V  V /| | | | | |
-# |_|____/ \_/\_/ |_| |_| |_|
-#                   i3 config
+#
+# o┏━┓┓ ┳┏┏┓
+# ┃ ━┫┃┃┃┃┃┃
+# ┛┗━┛┗┻┛┛ ┛
+# i3wm config
 #
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
