Add dmenu to rounded corners exclude

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -154,8 +154,9 @@ corner-radius = 0
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
+    "class_g ?= 'Dmenu'",
+    "window_type = 'dock'",
+    "window_type = 'desktop'"
 ];
 
 # }}}
