--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -92,7 +92,7 @@ scrolling:
 # fall back to the value specified for the normal font.
 font:
   normal:
-    family: JetBrainsMono Nerd Font
+    family: Iosevka Nerd Font
     style: Regular
   # bold:
   #   family: monospace
@@ -103,7 +103,7 @@ font:
   # bold_italic:
   #   family: monospace
   #   style: Bold Italic
-  size: 9
+  size: 8
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
