--- a/.config/sway/config
+++ b/.config/sway/config
@@ -61,8 +61,8 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "0"
 
-# define monitor
-# (Use the 'xrandr --listmonitors')
+# define monitor(s)
+# (Use the 'swaymsg -t get_outputs')
 set $mon1 "DisplayPort-0"
 set $mon2 "HDMI-A-1"
 
