--- a/.config/sway/config
+++ b/.config/sway/config
@@ -169,11 +169,13 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
   middle_emulation enabled
 }
 
-input "1:1:AT_Translated_Set_2_Keyboard" repeat_delay 300
-input "1:1:AT_Translated_Set_2_Keyboard" repeat_rate 30
+input "1:1:AT_Translated_Set_2_keyboard" {
+  xkb_layout "gb,th"
+  xkb_options "grp:alt_shift_toggle""
+}
 
-input * xkb_layout "gb,th"
-input * xkb_options "grp:alt_shift_toggle"
+input "1:1:AT_Translated_Set_2_keyboard" repeat_delay 300
+input "1:1:AT_Translated_Set_2_keyboard" repeat_rate 30
 
 #: }}}
 
