--- a/.config/sway/config
+++ b/.config/sway/config
@@ -169,13 +169,15 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
   middle_emulation enabled
 }
 
+input "type:keyboard" {
+  repeat_delay 300
+  repeat_rate 30
+}
+
 input "1:1:AT_Translated_Set_2_keyboard" {
   xkb_layout "gb,th"
   xkb_options "grp:alt_shift_toggle""
 }
-
-input "1:1:AT_Translated_Set_2_keyboard" repeat_delay 300
-input "1:1:AT_Translated_Set_2_keyboard" repeat_rate 30
 
 #: }}}
 
