--- a/.config/sway/config
+++ b/.config/sway/config
@@ -27,6 +27,9 @@ exec_always --no-startup-id xrdb -load ~/.Xresources
 # autotiling
 exec_always --no-startup-id autotiling
 
+# clamshell detect
+exec_always --no-startup-id ~/bin/sway_clamshell
+
 #: }}}
 
 #: Variables {{{
@@ -122,6 +125,9 @@ output * bg $HOME/.wallpaper.jpg fill
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
+
+bindswitch --reload --locked lid:on output $laptop disable
+bindswitch --reload --locked lid:off output $laptop enable
 
 #: }}}
 
