--- a/.config/sway/config
+++ b/.config/sway/config
@@ -186,6 +186,12 @@ input "1:1:AT_Translated_Set_2_keyboard" {
   xkb_options "grp:alt_shift_toggle""
 }
 
+input "1133:16489:Logitech_MX_Master_2S" {
+  accel_profile adaptive
+  dwt enabled
+  natural_scroll enabled
+}
+
 #: }}}
 
 #: Container / Windows control {{{
