--- a/.config/sway/config
+++ b/.config/sway/config
@@ -446,8 +446,8 @@ bindsym $mod+Shift+b border toggle
 # audio
 bindsym XF86AudioMute           exec amixer set Master toggle
 bindsym XF86AudioMicMute        exec amixer set Capture toggle
-bindsym XF86AudioRaiseVolume    exec amixer set Master 2.5%,5%+;
-bindsym XF86AudioLowerVolume    exec amixer set Master 2.5%,5%-;
+bindsym XF86AudioRaiseVolume    exec amixer set Master 2.5%+,5%+;
+bindsym XF86AudioLowerVolume    exec amixer set Master 2.5%-,5%-;
 
 # play/pause keys for spotify
 bindsym XF86AudioPlay exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
