--- a/.config/sway/config
+++ b/.config/sway/config
@@ -164,6 +164,13 @@ bindswitch --reload --locked lid:off output $laptop enable
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
+input "type:keyboard" {
+  repeat_delay 300
+  repeat_rate 30
+  xkb_layout "us,th"
+  xkb_options "grp:win_space_toggle""
+}
+
 input "2:10:TPPS/2_IBM_TrackPoint" {
   dwt enabled
   tap enabled
@@ -177,11 +184,6 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
   tap enabled
   natural_scroll enabled
   middle_emulation enabled
-}
-
-input "type:keyboard" {
-  repeat_delay 300
-  repeat_rate 30
 }
 
 input "1:1:AT_Translated_Set_2_keyboard" {
