--- a/.config/sway/config
+++ b/.config/sway/config
@@ -500,6 +500,8 @@ bar {
 # assign applications to specific workspace
 assign [class="(?i)(?:firefox)"] \
   $ws2
+assign [app_id="(?i)(?:telegram)"] \
+  $ws9
 
 for_window [class="Spotify"] \
   move --no-auto-back-and-forth to workspace $ws10
