Change keyboard language switching keybind to alt+shift because win+space is mess with float toggle

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -168,7 +168,7 @@ input "type:keyboard" {
   repeat_delay 300
   repeat_rate 30
   xkb_layout "us,th"
-  xkb_options "grp:win_space_toggle""
+  xkb_options "grp:alt_shift_toggle""
 }
 
 input "2:10:TPPS/2_IBM_TrackPoint" {
