--- a/.config/sway/config
+++ b/.config/sway/config
@@ -506,6 +506,9 @@ assign [app_id="(?i)(?:telegram)"] \
 for_window [class="(?i)(?:spotify)"] \
   move --no-auto-back-and-forth to workspace $ws10
 
+for_window [app_id="(?i)(?:keepassxc)"] \
+  move scratchpad
+
 # focus, floating, & sticky
 for_window [class="(?i)(?:qt5ct|pinentry)"] \
   floating enable, focus
