Add DP-2 output

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,7 +1,7 @@
 {
     "layer": "bottom",
     // List output from command line using `swaymsg -t get_output`
-    "output": ["LVDS-1", "DP-1"],
+    "output": ["LVDS-1", "DP-1", "DP-2"],
     "height": 24,
     "position": "top",
     "modules-left": ["sway/workspaces", "sway/mode", "sway/window"],
