--- a/.config/sway/config
+++ b/.config/sway/config
@@ -75,9 +75,10 @@ set $mon2 "HDMI-A-1"
 
 # bar and window color
 set $bg-color               #16161c
+set $text-color             #fdf0ed
 set $active-bg-color        #09f7a0
+set $active-text-color      #16161c
 set $inactive-bg-color      #232530
-set $text-color             #16161c
 set $inactive-text-color    #6c6f93
 set $urgent-bg-color        #f43e5c
 set $indicator-color        #fab28e
@@ -214,13 +215,13 @@ default_border pixel 2
 # client    border    background \
 #   text    indicator
 client.focused            $active-bg-color    $active-bg-color \
-  $text-color             $indicator-color
+  $active-text-color      $indicator-color
 client.unfocused          $inactive-bg-color  $bg-color \
   $inactive-text-color    $indicator-color
 client.focused_inactive   $inactive-bg-color	$inactive-bg-color \
   $inactive-text-color    $indicator-color
 client.urgent             $urgent-bg-color    $urgent-bg-color \
-  $text-color             $indicator-color
+  $active-text-color      $indicator-color
 
 # switch to workspace with urgent window
 for_window [urgent="latest"]    focus
