--- a/.config/sway/config
+++ b/.config/sway/config
@@ -90,9 +90,9 @@ set $border_size 1
 # on the original workspace that the command was run on.
 # set $menu dmenu_path | dmenu | xargs swaymsg exec --
 set $launcher ulauncher
-set $menu bemenu-run -m 0 -i \
+set $menu bemenu-run -m 0 -i -p "run >" \
   --fn 'RobotoCondensed Regular 13' \
-  --tb '$inactive-bg-color' --tf '$inactive-text-color' \
+  --tb '$inactive-bg-color' --tf '$active-bg-color' \
   --fb '$bg-color' --ff '$active-bg-color' \
   --nb '$bg-color' --nf '$text-color' \
   --hb '$active-bg-color' --hf '$active-text-color' \
