--- a/.config/sway/config
+++ b/.config/sway/config
@@ -70,8 +70,8 @@ set $ws10 "0"
 # define monitor(s)
 # (Use the 'swaymsg -t get_outputs')
 set $laptop "LVDS-1"
-set $mon1 "DisplayPort-0"
-set $mon2 "HDMI-A-1"
+set $mon1 "HDMI-A-1"
+set $mon2 "DP-2"
 
 # bar and window color
 set $bg-color               #16161c
