--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -16,7 +16,7 @@
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
 import:
- - $HOME/.config/alacritty/schemes/tokyonight.yml
+ - ~/.config/alacritty/schemes/synthwave.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
