--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,7 +22,7 @@ exec --no-startup-id /usr/bin/dunst
 # make numlock active
 exec --no-startup-id numlockx on
 
-exec_always --no-startup-id xrdb -load ~/.Xresources
+exec_always --no-startup-id xrdb -load $HOME/.Xresources
 
 # autotiling
 exec_always --no-startup-id autotiling
