--- a/.config/i3/config
+++ b/.config/i3/config
@@ -52,6 +52,9 @@ set $right l
 # prefered terminal
 set $term alacritty
 
+# prefered file manager
+set $filemanager pcmanfm
+
 # define workspace
 set $ws1 "1"
 set $ws2 "2"
@@ -197,6 +200,9 @@ smart_borders no_gaps
 # bindsym $mod+t          exec --no-startup-id i3-sensible-terminal
 bindsym $mod+t          exec --no-startup-id $term
 bindsym $mod+Return     exec --no-startup-id $term
+
+# file manager
+bindsym $mod+Shift+Return exec --no-startup-id $filemanager
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -403,9 +409,6 @@ bindsym Print exec --no-startup-id "flameshot gui -p $HOME/Pictures"
 
 # Splatmoji
 bindsym $mod+slash exec "splatmoji copy"
-
-# app shortcuts
-bindsym $mod+n exec "/usr/bin/pcmanfm"
 
 #: }}}
 
