Add config file version indicator

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,6 +8,8 @@
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
+# i3 config file (v4)
+
 #: Autostart {{{
 
 # run once: exec
