Update color variables

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -76,13 +76,14 @@ set $mon1 "DisplayPort-0"
 set $mon2 "HDMI-A-1"
 
 # bar and container color
-set $bg-color               #000000
-set $active-bg-color        #00ff9c
-set $inactive-bg-color      #1b1c1b
-set $text-color             #f7f8f7
-set $inactive-text-color    #333333
-set $urgent-bg-color        #ff5300
-set $indicator-color        #2c78bf
+set $bg-color               #16161c
+set $text-color             #fdf0ed
+set $active-bg-color        #09f7a0
+set $active-text-color      #16161c
+set $inactive-bg-color      #232530
+set $inactive-text-color    #6c6f93
+set $urgent-bg-color        #f43e5c
+set $indicator-color        #fab28e
 
 set $border_size 1
 
@@ -162,13 +163,13 @@ hide_edge_borders smart
 # client    border    background \
 #   text    indicator
 client.focused            $active-bg-color    $active-bg-color \
-  $inactive-text-color    $indicator-color
-client.unfocused          $bg-color           $bg-color \
+  $active-text-color      $indicator-color
+client.unfocused          $inactive-bg-color  $bg-color \
   $inactive-text-color    $indicator-color
 client.focused_inactive   $inactive-bg-color	$inactive-bg-color \
-  $bg-color               $indicator-color
+  $inactive-text-color    $indicator-color
 client.urgent             $urgent-bg-color    $urgent-bg-color \
-  $text-color             $indicator-color
+  $active-text-color      $indicator-color
 
 # switch to workspace with urgent window
 for_window [urgent="latest"]    focus
