Load NetworkManager applet on startup

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -21,6 +21,9 @@ exec --no-startup-id /usr/bin/lxpolkit &
 # desktop notification
 exec --no-startup-id /usr/bin/dunst
 
+# network manager
+exec --no-startup-id nm-applet
+
 # make numlock active
 exec --no-startup-id numlockx on
 
