Remove unused rofi logout keybind

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -246,10 +246,7 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+c reload
 
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+x exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
-# logout script
-bindsym $mod+x exec --no-startup-id rofi_run -l
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 #: }}}
 
