--- a/.config/sway/config
+++ b/.config/sway/config
@@ -378,10 +378,10 @@ bindsym $mod+a focus parent
 # Sway has a "scratchpad", which is a bag of holding for windows.
 # You can send windows there and get them back later.
 
-# Move the currently focused window to the scratchpad
+# move the current focus window to the scratchpad
 bindsym $mod+Shift+minus move scratchpad
 
-# Show the next scratchpad window or hide the focused scratchpad window.
+# Show the next scratchpad window or hide the current focus scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
 
