--- a/.config/i3/config
+++ b/.config/i3/config
@@ -335,10 +335,10 @@ bindsym $mod+Shift+e layout toggle split
 bindsym $mod+f fullscreen toggle
 
 # toggle the current focus between tiling / floating
-bindsym Mod1+Shift+space floating toggle
+bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym Mod1+space focus mode_toggle
+bindsym $mod+space focus mode_toggle
 
 # move focus between parent / child windows
 bindsym $mod+a focus parent
