--- a/.config/i3/config
+++ b/.config/i3/config
@@ -239,11 +239,11 @@ bindsym $mod+d exec $menu
 # Despite the name, also works for non-floating windows.
 floating_modifier $mod
 
-# restart inplace (preserves your layout/session, can be used to upgrade wm)
-bindsym $mod+Shift+r restart
-
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
 
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
@@ -253,25 +253,25 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 #: Moving around {{{
 
 # move focus around
-bindsym $mod+$left  focus left
-bindsym $mod+$down  focus down
 bindsym $mod+$up    focus up
+bindsym $mod+$down  focus down
+bindsym $mod+$left  focus left
 bindsym $mod+$right focus right
 # Or use $mod+[up|down|left|right]
-bindsym $mod+Left   focus left
-bindsym $mod+Down   focus down
 bindsym $mod+Up     focus up
+bindsym $mod+Down   focus down
+bindsym $mod+Left   focus left
 bindsym $mod+Right  focus right
 
 # move focused window
-bindsym $mod+Shift+$left    move left   10px
-bindsym $mod+Shift+$down    move down   10px
 bindsym $mod+Shift+$up      move up     10px
+bindsym $mod+Shift+$down    move down   10px
+bindsym $mod+Shift+$left    move left   10px
 bindsym $mod+Shift+$right   move right  10px
 # Or use $mod+Shift+[up|down|left|right]
-bindsym $mod+Shift+Left     move left   10px
-bindsym $mod+Shift+Down     move down   10px
 bindsym $mod+Shift+Up       move up     10px
+bindsym $mod+Shift+Down     move down   10px
+bindsym $mod+Shift+Left     move left   10px
 bindsym $mod+Shift+Right    move right  10px
 
 #: }}}
